[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "findpeaks"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "findpeaks is for the detection of peaks and valleys in a 1D vector and 2D array (image)."
readme = "README.md"
requires-python = ">=3"
keywords = [
    "Python",
    "peak detection",
    "valley detection",
    "image processing",
    "signal processing",
    "topology",
    "topological data analysis",
    "TDA",
    "denoising",
    "speckle noise removal",
    "feature extraction",
    "1D signal",
    "2D array",
    "image analysis",
    "findpeaks",
    "peak analysis",
    "data analysis",
    "scientific computing"
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

dependencies = [
    'scipy',
    'matplotlib',
    'numpy',
    'pandas',
    'tqdm',
    'requests',
    'caerus>=0.1.9',
    'xarray',
    'joblib',
    'adjustText',
    ]

[project.urls]
Homepage = "https://erdogant.github.io/findpeaks"
Download = "https://github.com/erdogant/findpeaks/archive/{version}.tar.gz"

[tool.setuptools.packages.find]
include = ["findpeaks*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "findpeaks.__version__" }
